# pkg/routes/user.go
@@ -7,43 +7,23 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// func UserRoutes(engine *gin.RouterGroup, userHandler *handler.UserHandler, otpHandler *handler.OtpHandler) {
-// 	engine.POST("/login", userHandler.Login)
-// 	engine.POST("/signup", userHandler.SignUp)
-// 	engine.POST("/sendotp", otpHandler.SendOTP)
-// 	engine.POST("/verifyotp", otpHandler.VerifyOTP)
-// 	engine.POST("forgotpassword", otpHandler.ForgotPassword)
-
-// 	// Auth middleware
-// 	engine.Use(middleware.UserAuthMiddleware)
-// 	engine.POST("/reportUser", userHandler.ReportUser)
-// 	profile := engine.Group("/profile")
-// 	{
-
-//			profile.PATCH("/EditProfile", userHandler.EditProfile)
-//			profile.GET("/GetProfile", userHandler.GetProfile)
-//			settings := profile.Group("/settings")
-//			profile.POST("/logout", userHandler.Logout)
-//			{
-//				security := settings.Group("/security")
-//				{
-//					security.PATCH("/change-password", userHandler.ChangePassword)
-//				}
-//			}
-//		}
-//	}
-func UserRoutes(engine *gin.RouterGroup, userHandler *handler.UserHandler, otpHandler *handler.OtpHandler, categoyHandler *handler.CategoryHandler) {
+func UserRoutes(engine *gin.RouterGroup, userHandler *handler.UserHandler, otpHandler *handler.OtpHandler, categoyHandler *handler.CategoryHandler, videohandler *handler.VideoHandler) {
 	engine.POST("/login", userHandler.Login)
 	engine.POST("/signup", userHandler.SignUp)
 	engine.POST("/sendotp", otpHandler.SendOTP)
 	engine.POST("/verifyotp", otpHandler.VerifyOTP)
 	engine.POST("/forgotpassword", otpHandler.ForgotPassword)
 	engine.GET("/category", categoyHandler.CategoriesList)
+	engine.GET("/category/videos", categoyHandler.ListVideosByCategory)
 	// Auth middleware
 	engine.Use(middleware.UserAuthMiddleware)
+	engine.POST("/upload/video", videohandler.UploadVideo)
 
 	profile := engine.Group("/profile")
 	{
+		profile.GET("/videos", videohandler.ListVideos)
+		profile.PATCH("/videos/editVideo", videohandler.EditVideoDetails)
+		profile.DELETE("/videos/delete", videohandler.DeleteVideo)
 		profile.PATCH("/EditProfile", userHandler.EditProfile)
 		profile.GET("", userHandler.GetProfile) // Change the route from "/GetProfile" to "/profile"
 
